# lumbago_codex

./: .env  .env.example  .gitignore  AGENTS.md  Build.md  Build2.md  CLAUDE.md  Checklist.md  GUARDIAN_SAFETY_REVIEW_REQUEST_consolidation_2026-06-16.md  Old.md  README.md  RECOVERY.md  TODO.md  ToDo.md  ToDo2.md  alembic.ini  commit_msg.txt  main.py  memory.md  next.config.mjs  package-lock.json  przeniesione.md  pyinstaller.spec  pyproject.toml  requirements.txt  set_api_keys.py  tmp_spotify.txt  vercel.json
.claude/: launch.json
.codex-plugin/: plugin.json
.lumbago_data/: faulthandler.txt  lumbago.db
Lumbago_Music/: .env.example  .gitignore  alembic.ini  launcher.py  main.py  pyproject.toml
Lumbago_Music/.github/workflows/: ci.yml  release.yml
Lumbago_Music/installer/: lumbago.spec  lumbago_installer.nsi
Lumbago_Music/lumbago_app/: __init__.py
Lumbago_Music/lumbago_app/core/: __init__.py  config.py  constants.py  exceptions.py  logging_setup.py  utils.py
Lumbago_Music/lumbago_app/data/: __init__.py  database.py  models.py  repository.py
Lumbago_Music/lumbago_app/data/migrations/: env.py
Lumbago_Music/lumbago_app/services/: __init__.py  audio_analysis.py  backup_service.py  beatgrid_service.py  duplicate_service.py  fingerprint_service.py  import_service.py  lufs_service.py  rename_service.py  watchdog_service.py  waveform_service.py
Lumbago_Music/lumbago_app/services/ai/: __init__.py  llm_cache.py  llm_router.py  setlist_service.py  tagger_service.py
Lumbago_Music/lumbago_app/services/ai/providers/: __init__.py  base_provider.py  claude_provider.py  deepseek_provider.py  gemini_provider.py  grok_provider.py  openai_provider.py
Lumbago_Music/lumbago_app/services/integrations/: __init__.py  acoustid_service.py  discogs_service.py  lastfm_service.py  metadata_merger.py  musicbrainz_service.py  spotify_service.py
Lumbago_Music/lumbago_app/ui/: __init__.py  app.py  main_window.py
Lumbago_Music/lumbago_app/ui/dialogs/: __init__.py  backup_dialog.py  details_panel.py  duplicate_dialog.py  import_wizard.py  rekordbox_export.py  rename_dialog.py  setlist_dialog.py  setup_wizard.py  tagger_dialog.py
Lumbago_Music/lumbago_app/ui/models/: __init__.py  playlist_tree_model.py  track_table_model.py
Lumbago_Music/lumbago_app/ui/panels/: __init__.py  filter_panel.py  library_panel.py  player_panel.py  playlist_panel.py  settings_panel.py
Lumbago_Music/lumbago_app/ui/themes/: __init__.py  cyber_neon.py  fluent_dark.py
Lumbago_Music/lumbago_app/ui/widgets/: __init__.py  cue_point_editor.py  mini_waveform.py  rating_widget.py  tag_cloud_widget.py  vu_meter.py  waveform_widget.py
Lumbago_Music/lumbago_app/ui/workers/: __init__.py  analysis_worker.py  duplicate_worker.py  fingerprint_worker.py  import_worker.py  tagger_worker.py
Lumbago_Music/tests/: __init__.py  conftest.py  factories.py  test_audio_analysis.py  test_duplicates.py  test_import_service.py  test_integrations.py  test_models.py  test_tagger.py
Lumbago_Music/tests/benchmarks/: bench_10k.py
MEMORY/: CONSOLIDATION_REPORT_2026-06-16.md  INDEX.md
ai_panel/: __init__.py  chat_widget.py  command_dispatcher.py  command_registry.py  gemini_client.py  sandbox_runner.py
app/: layout.tsx
core/: __init__.py  analysis_cache.py  audio.py  backup.py  config.py  metadata_quality.py  models.py  renamer.py  (+3 more)
(+590 files in other folders)
