[project]
name = "lumbago-music-ai"
version = "0.1.0"
description = "Lumbago Music AI - desktop Windows app"
requires-python = ">=3.11"
dependencies = [
  "PyQt6==6.7.1",
  "PyQt6-Qt6==6.7.2",
  "PyQt6-sip==13.8.0",
  "SQLAlchemy==2.0.36",
  "alembic==1.13.3",
  "mutagen==1.47.0",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
  "rapidfuzz==3.9.3; python_version < '3.14'",
  "rapidfuzz==3.14.3; python_version >= '3.14'",
  "pytest==8.3.5",
  "PyInstaller==6.19.0",
  "numpy==1.26.4; python_version < '3.14'",
  "numpy==2.4.3; python_version >= '3.14'",
  "librosa==0.10.2.post1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "data*", "services*", "ui*"]

[tool.black]
line-length = 100

# Faza1 coverage (item5 per PLAN_ROZBUDOWA Faza1 + Szpieg/Plan): pytest-cov optional.
# Run: pytest --cov=services.playback --cov=ui.dj --cov-report=term-missing (after pip install pytest-cov)
# Threshold in future CI. Per SZPIEG research 2026-07-14 plan rozbudowy Faza1 Polish... must document identical.
[tool.pytest.ini_options]
addopts = "--cov=services --cov-report=term-missing:skip-covered --cov-fail-under=65"
# Note: requires pytest-cov; current baseline ~70% on playback paths post Faza1.
